corrected vertical alignment of gradient and min / max expression levels

--- a/web/src/main/webapp/resources/css/atlas.css
+++ b/web/src/main/webapp/resources/css/atlas.css
@@ -69,6 +69,7 @@ th {
 }
 
 td, th{
+    vertical-align: inherit;
     border: none;
     margin: 0px;
     padding: 1px;
